--- a/packages/ui-library/turbo.json
+++ b/packages/ui-library/turbo.json
@@ -29,6 +29,9 @@
       "persistent": true,
       "interactive": true
     },
-    "test:coverage": {}
+    "test:coverage": {},
+    "clear": {
+      "cache": false
+    }
   }
 }
