--- a/.github/workflows/dry-run.yml
+++ b/.github/workflows/dry-run.yml
@@ -29,5 +29,5 @@ jobs:
         with:
           token: ${{ secrets.NPM_TOKEN }}
           access: public
-          package: packages
+          package: packages/ui-library
           dry-run: true
