--- a/.github/workflows/dry-run.yml
+++ b/.github/workflows/dry-run.yml
@@ -10,6 +10,7 @@ on:
       - reopened
       - synchronize
       - ready_for_review
+      - labeled
 
 jobs:
   test_publish:
@@ -31,3 +32,17 @@ jobs:
           access: public
           package: packages/ui-library
           dry-run: true
+  
+  test_build_docs:
+    if: github.event.pull_request.draft == false && contains(github.event.pull_request.labels.*.name, 'dependencies')
+    name: Build DOCS
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+      - name: Install dependencies
+        run: npm ci
+      - name: build docs
+        run: npm run build
