--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: 20
       - name: Install dependencies
         run: npm ci
-      - name: lint src directory
+      - name: Lint package
         run: npm run lint:library
         
   Test:
@@ -29,7 +29,7 @@ jobs:
           node-version: 20
       - name: Install dependencies
         run: npm ci
-      - name: run tests
+      - name: Run tests
         run: npm run test
 
   publish_package:
@@ -43,7 +43,7 @@ jobs:
           node-version: "20"
       - name: Install dependencies
         run: npm ci
-      - name: Build package
+      - name: Publish package
         run: npm run build:library
       - uses: JS-DevTools/npm-publish@v3
         with:
