--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: install
+      - name: Install dependencies
         run: npm ci
       - uses: int128/comment-action@v1
         with:
