--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: release
+name: publish
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
@@ -16,7 +16,7 @@ jobs:
           node-version: 20
       - name: Install dependencies
         run: npm ci
-      - name: lint src directory
+      - name: Lint package
         run: npm run lint:library
 
   Test:
@@ -30,7 +30,7 @@ jobs:
           node-version: 20
       - name: Install dependencies
         run: npm ci
-      - name: run tests
+      - name: Run tests
         run: npm run test
 
   publish_package:
@@ -44,7 +44,7 @@ jobs:
           node-version: "20"
       - name: Install dependencies
         run: npm ci
-      - name: Build package
+      - name: Publish package
         run: npm run build:library
       - uses: JS-DevTools/npm-publish@v3
         with:
