--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: test package
+name: test-package
 on:
   pull_request:
     branches: [ "main" ]
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: install dependencies
+      - name: Install dependencies
         run: npm ci
-      - name: test
+      - name: Run tests
         run: npm run test
