--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -15,7 +15,7 @@ on:
 jobs:
   test_build_docs:
     if: github.event.pull_request.draft == false && contains(github.event.pull_request.labels.*.name, 'dependencies')
-    name: Build DOCS
+    name: Build docs
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -24,5 +24,5 @@ jobs:
           node-version: "20"
       - name: Install dependencies
         run: npm ci
-      - name: Build docs
+      - name: Build
         run: npm run build
