--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "name": "@hbuesing/ui-library",
-  "version": "5.0.0-beta.11",
+  "version": "5.0.0-beta.12",
   "description": "Collection of reusable ui components for react based applications",
   "source": "src/index.ts",
   "type": "module",
@@ -14,6 +14,22 @@
     "./index.css": {
       "import": "./dist/index.css",
       "require": "./dist/index.css"
+    },
+    "./button": {
+      "import": "./dist/components/button/index.js",
+      "require": "./dist/components/button/index.js"
+    },
+    "./button/index.css": {
+      "import": "./dist/components/button/index.css",
+      "require": "./dist/components/button/index.css"
+    },
+    "./radio": {
+      "import": "./dist/components/check/radio/index.js",
+      "require": "./dist/components/check/radio/index.js"
+    },
+    "./radio/index.css": {
+      "import": "./dist/components/check/radio/index.css",
+      "require": "./dist/components/check/radio/index.css"
     }
   },
   "files": [
