--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -7,7 +7,7 @@
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "noUnusedParameters": true,
