--- a/docs/package.json
+++ b/docs/package.json
@@ -14,5 +14,10 @@
     "next": "^15.2.4",
     "nextra": "^4.2.17",
     "nextra-theme-docs": "^4.2.17"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@next/eslint-plugin-next": "^15.3.0",
+    "eslint-config-next": "^15.3.0"
   }
 }
