--- a/package.json
+++ b/package.json
@@ -26,21 +26,17 @@
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.8",
-    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.23.0",
-    "@next/eslint-plugin-next": "^15.2.4",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "eslint": "^9.24.0",
-    "eslint-config-next": "^15.2.4",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.0.0",
     "sass": "^1.86.3",
     "turbo": "^2.5.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.1",
-    "typescript-plugin-css-modules": "^5.1.0"
+    "typescript-eslint": "^8.29.1"
   },
   "packageManager": "npm@11.1.0"
 }
