--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -53,6 +53,7 @@
     "esbuild": "0.25.2",
     "esbuild-sass-plugin": "^3.3.1",
     "jsdom": "^26.0.0",
+    "typescript-plugin-css-modules": "^5.1.0",
     "vitest": "^3.1.1"
   }
 }
