adds common path alias

--- a/packages/ui-library/tsconfig.build.json
+++ b/packages/ui-library/tsconfig.build.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "paths": {
+      "@common/*": ["./src/components/common/*"],
       "@hooks/*": ["./src/hooks/*"],
       "@utils/*": ["./src/utils/*"]
     }
