--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,6 +21,8 @@ jobs:
           node-version: "lts/*"
       - name: Install dependencies
         run: npm ci
+      - name: Build types
+        run: npm run build:types
       - uses: int128/comment-action@v1
         with:
           run: npm run lint
