--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,7 +44,7 @@ jobs:
           node-version: "lts/*"
       - name: Install dependencies
         run: npm ci
-      - name: Publish package
+      - name: Bundle package
         run: npm run build:library
       - uses: JS-DevTools/npm-publish@v3
         with:
