--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@vitest/coverage-v8": "^3.1.2",
     "esbuild": "0.25.3",
     "esbuild-sass-plugin": "^3.3.1",
