--- a/packages/ui-library/turbo.json
+++ b/packages/ui-library/turbo.json
@@ -32,6 +32,11 @@
     "test:coverage": {},
     "clear": {
       "cache": false
+    },
+    "storybook": {
+      "cache": false,
+      "persistent": true,
+      "interactive": true
     }
   }
 }
