--- a/packages/ui-library/tsconfig.build.json
+++ b/packages/ui-library/tsconfig.build.json
@@ -15,6 +15,8 @@
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    ".storybook",
+    "./src/components/*/*.stories.ts"
   ]
 }
