--- a/docs/package.json
+++ b/docs/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "lint": "next lint",
+    "lint": "eslint .",
     "dev": "next",
     "build": "next build",
     "start": "next start",
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@hbuesing/ui-library": "*",
-    "next": "^15.5.3",
-    "nextra": "^4.4.0",
-    "nextra-theme-docs": "^4.4.0"
+    "next": "16.0.1",
+    "nextra": "^4.6.0",
+    "nextra-theme-docs": "^4.6.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
-    "@next/eslint-plugin-next": "^15.5.3",
-    "eslint-config-next": "^15.5.3"
+    "@next/eslint-plugin-next": "16.0.1",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.1"
   }
 }
