--- a/docs/package.json
+++ b/docs/package.json
@@ -4,20 +4,20 @@
   "type": "module",
   "scripts": {
     "lint": "eslint .",
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "clear": "npx rimraf .next"
   },
   "dependencies": {
     "@hbuesing/ui-library": "*",
-    "next": "16.0.1",
+    "next": "^15.5.6",
     "nextra": "^4.6.0",
     "nextra-theme-docs": "^4.6.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "16.0.1",
+    "@next/eslint-plugin-next": "^15.5.6",
     "eslint": "^9.39.1",
-    "eslint-config-next": "^16.0.1"
+    "eslint-config-next": "^15.5.6"
   }
 }
