--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,7 +46,7 @@ jobs:
       - uses: actions/setup-node@v6
         with:
           node-version: "lts/*"
-          registry-url: "https://registry.npmjs.org"#
+          registry-url: "https://registry.npmjs.org"
           
       - name: Update npm
         run: npm install -g npm@latest
@@ -56,3 +56,5 @@ jobs:
         run: npm run build:library
       - name: Publish package to npm
         run: npm publish --access public --workspace packages/ui-library
+        env:
+          NPM_CONFIG_PROVENANCE: true
