--- a/package.json
+++ b/package.json
@@ -22,22 +22,22 @@
     "storybook": "turbo storybook"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.4.1",
-    "@eslint/js": "^9.39.1",
-    "@types/node": "^24.10.0",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
-    "eslint": "^9.39.1",
+    "@eslint/compat": "^2.0.0",
+    "@eslint/js": "^9.39.2",
+    "@types/node": "^25.0.2",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.5.0",
-    "sass": "^1.93.3",
-    "turbo": "^2.6.0",
+    "sass": "^1.96.0",
+    "turbo": "^2.6.3",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.3"
+    "typescript-eslint": "^8.49.0"
   },
   "packageManager": "npm@11.4.1"
 }
