--- a/docs/package.json
+++ b/docs/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@hbuesing/ui-library": "*",
-    "next": "^15.5.9",
+    "next": "16.0.10",
     "nextra": "^4.6.1",
     "nextra-theme-docs": "^4.6.1"
   },
