--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
   "devDependencies": {
     "@eslint/compat": "^2.0.0",
     "@eslint/js": "^9.39.2",
-    "@types/node": "^25.0.2",
-    "@types/react": "19.2.7",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.5.0",
-    "sass": "^1.96.0",
-    "turbo": "^2.6.3",
+    "sass": "^1.97.1",
+    "turbo": "^2.7.1",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.50.0"
+    "typescript-eslint": "^8.50.1"
   },
   "packageManager": "npm@11.4.1"
 }
