--- a/docs/package.json
+++ b/docs/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@hbuesing/ui-library": "*",
-    "next": "16.1.1",
+    "next": "^16.1.6",
     "nextra": "^4.6.1",
     "nextra-theme-docs": "^4.6.1"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^16.1.1",
-    "eslint": "^9.39.2",
-    "eslint-config-next": "^16.1.1"
+    "@next/eslint-plugin-next": "^16.1.6",
+    "eslint": "^10.0.0",
+    "eslint-config-next": "^16.1.6"
   }
 }
